--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.6.3",
     "react-native": "0.58.4",
     "react-native-gesture-handler": "^1.0.15",
+    "react-native-modal": "^7.0.2",
     "react-navigation": "^3.1.5"
   },
   "devDependencies": {
