--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.58.4",
     "react-native-gesture-handler": "^1.0.15",
     "react-native-modal": "^7.0.2",
+    "react-native-simple-dialogs": "^1.1.0",
     "react-navigation": "^3.1.5"
   },
   "devDependencies": {
